--- a/de/Current/index.html
+++ b/de/Current/index.html
@@ -9,39 +9,81 @@
 </head>
 <body>
     <nav>
-        <div class="row">
+        <div class="row-1">
             <div class="col-1">
-                <a href="../AboutRin/index.html" id="AboutRin" class="Nav">About Rin</a>
+                <a href="../AboutRin" id="AboutRin" class="Nav">About Rin</a>
                 <p id="pLjubav">
-                    <a href="../Ljubav/index.html" id="Ljubav" class="Nav">Ljubav</a>
+                    <a href="../Ljubav" id="Ljubav" class="Nav">Ljubav</a>
                 </p>
             </div>
             <div class="col-2">
-                <a href="../Current/index.html"><img src="Logo.png" alt="King of Ljubav Logo" id="Logo"></a>
+                <a href="../Current"><img src="../../Images/Logo.png" alt="King of Ljubav Logo" id="Logo"></a>
             </div>
             <div class="col-3">
-                <a href="../Live/index.html" id="Live" class="Nav">Rin Live</a>
+                <a href="../Live" id="Live" class="Nav">Rin Live</a>
                 <p id="pMusic">
-                    <a href="../Music/index.html" id="Music" class="Nav">Music</a>
+                    <a href="../Music" id="Music" class="Nav">Music</a>
                 </p>
             </div>    
             <div class="col-4">
-                <a href="../Current/index.html" id="Current" class="Nav">Current</a>
+                <a href="../Current" id="Current" class="Nav">Current</a>
             </div>    
         </div>
     </nav>
     <article>
-        <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione eius, labore doloremque harum architecto eos repudiandae exercitationem aspernatur illum beatae accusantium nesciunt quis ipsam quos similique, nihil, ex culpa commodi suscipit voluptates ducimus molestias? Quasi commodi totam beatae reprehenderit! Eum vitae tenetur autem dolores, magni necessitatibus fugiat mollitia ex nostrum modi inventore ut quasi temporibus consequuntur optio doloribus molestias quibusdam neque accusantium quos a asperiores delectus! Voluptate, nostrum optio? Expedita, nemo culpa praesentium dolores animi ullam corrupti, quis quisquam labore dicta ex, aspernatur debitis aperiam. Qui, soluta facilis accusamus voluptas debitis iste accusantium dignissimos laborum minima reiciendis, ratione quae magnam est, nulla dicta neque quidem enim repellendus ipsam expedita? Vel dolore ab animi beatae aliquam, temporibus voluptas eius accusantium aut laudantium voluptates eligendi sequi aperiam aspernatur nam, obcaecati dolores numquam nesciunt a ipsum? Harum consequatur natus, aliquid ea hic nesciunt quos ratione doloremque sunt excepturi, reprehenderit quod voluptatem cumque recusandae iusto modi eum! Adipisci quod, quia perspiciatis, repudiandae maiores a doloremque rerum reprehenderit, inventore commodi obcaecati esse. Aut maxime libero placeat sint? A dolorum facilis mollitia dicta fugit et deserunt perferendis? Maxime a earum, in facere ullam nihil? Veritatis commodi aut, delectus totam dolorem neque reiciendis ex magnam ea. Perspiciatis quae soluta incidunt iste pariatur repellendus fugit magni rem ab impedit amet facilis dolorum voluptates expedita, maxime vel minima cum suscipit recusandae. Quibusdam amet temporibus expedita rerum eligendi et, natus neque in alias iure, minus recusandae cumque aliquam atque earum hic repellat non ab fuga aperiam eaque a eius! Eaque nisi libero, laborum debitis numquam unde! Sit quisquam neque adipisci magni doloribus praesentium eum, vel incidunt molestias sunt laborum fugit, odio optio voluptatum vitae, maiores explicabo id perferendis! Dolorem recusandae cumque unde, reiciendis doloribus sapiente molestias iste nulla non dolores consequatur, et, placeat consectetur repellat? Quae iusto praesentium numquam eos maiores, animi error nobis odit, illo, quo cumque quod explicabo debitis culpa sint. Similique praesentium, porro provident fugit incidunt nobis facilis dolore, ipsam obcaecati beatae, ea doloremque harum reiciendis! Vero esse incidunt voluptas tempora perferendis hic autem possimus asperiores sit! Labore dolore officia ratione cum praesentium porro, explicabo, debitis eveniet dolores, iste beatae accusamus a reiciendis sunt quas. Velit, dolorem! Ipsa voluptatum vel cupiditate in iste deleniti, facilis eligendi laudantium tenetur praesentium tempore rem doloribus sequi, dolore earum necessitatibus aut minus libero suscipit similique alias quaerat voluptas! Placeat nisi quibusdam molestiae maxime vitae modi illo obcaecati tenetur possimus, vero cum, nemo consequuntur excepturi nulla deleniti esse. Neque illum expedita veniam maiores, aliquid explicabo. Aperiam animi perspiciatis praesentium debitis dolorem maiores consequatur nemo, consectetur quae fugiat ex repellat eius, ratione dolor perferendis commodi ducimus ipsum quo. Architecto omnis illum quibusdam quidem quas, ducimus veritatis ipsum voluptatum impedit ratione culpa iste dolore libero quam facere pariatur voluptate veniam est cum quaerat mollitia, reiciendis numquam rem vero! Debitis accusantium eligendi, repudiandae nam suscipit excepturi sapiente mollitia praesentium nemo? Dignissimos cumque obcaecati quam. Eligendi incidunt dicta cumque ipsam id possimus fugiat dolorem temporibus dolores nam reprehenderit sit harum accusantium est facere, inventore eveniet fuga.
-        </p>
-    </article>
-    <footer>
-        <div class="row">
+        <div class="row-2">
+            <div class="col-5">
+                <p>
+                    "Baby, komm und steig in die S-Bahn<br/>Denn echte Liebe braucht keine Extras"
+                </p>
+                <p id="pQuote">
+                    Rin - Aretha Franklin Freestyle, Eros (2018)                    
+                </p>        
+            </div>
+            <div class="col-6">
+                <a href="../AboutRin"><img src="../../Images/Current_Rin.png" alt="Picture of Rin" id="IMG_Current_Rin"></a>
+            </div>
+            <div class="col-7">
+                <p>
+                    stream Kleinstadt Deluxe <a href="../Music" class="a_Current">now</a> 
+                </p>        
+            </div>
+            <div class="col-8">
+                <a href="../Music"><img src="../../Images/Current_KSDeluxe.png" alt="Kleinstadt Deluxe Album-Cover" id="IMG_Current_KSDeluxe"></a>
+            </div>
+            <div class="col-9">
+                <a href="../Live"><img src="../../Images/Current_LivePoster.png" alt="Rin Live Tour 2022 Poster" id=IMG_Current_LivePoster></a>
+            </div>
             <div class="col-10">
-                <a href="../AboutUs/index.html" id="AboutUs" class="Footer">About Us</a>
+                <p>
+                    Rin is finally going on tour again in 2023 
+                    and will also come to your city
+                    <p id="pLive">More information <a href="../Live" class="a_Current">here</a>
+                </p>        
             </div>
             <div class="col-11">
-                ©RinKingofLjubav
+                <p>
+                    Ljubav© Part 3 <a href="../Ljubav" class="a_Current">now available</a>
+                </p>        
+            </div>
+            <div class="col-12">
+                <a href="../Ljubav"><img src="../../Images/Current_Ljubav.png"  id="IMG_Current_Ljubav"  alt="Ljubav Part 3 Advertisement"></a>
+            </div>
+            <div class="col-14">
+            </div>
+        </div>
+    </article>
+    <footer>
+        <div class="row-3">
+            <div class="col-16">
+                <a href="../AboutMe" id="AboutMe" class="Footer">About Me</a>
+            </div>
+            <div class="col-17">
+                <p id="Copyright" class="Footer">©RinKingofLjubav</p>
+            </div>
+            <div class="col-18">
+                <a href="../../en/Current"><img src="../../Images/English.png" alt="Set language to English" id="EnFlag"></a>
+                <a href="../../de/Current"><img src="../../Images/German.png" alt="Sprache auf Deutsch ändern" id="DeFlag"></a>
             </div>
         </div>
     </footer>
