--- a/en/Music/index.html
+++ b/en/Music/index.html
@@ -81,7 +81,7 @@
         <div class="row-3">
             <div class="col-16">
                 <p>
-                    Rin's discography with all albums, singles and EPs: <a href="https://de.wikipedia.org/wiki/RIN_(Rapper)/Diskografie" class="a_Music">Wikipedia</a>
+                    Rin's discography with all albums, singles and EPs: <a href="https://de.wikipedia.org/wiki/RIN_(Rapper)/Diskografie" class="a_Music" target="_blank">Wikipedia</a>
                 </p>
             </div>
             <div class="col-17">
