--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
                 <a href="en/Ljubav"><img src="Images/Current_Ljubav.png"  id="IMG_Current_Ljubav"  alt="Ljubav Part 3 Advertisement"></a>
             </div>
             <div class="col-14">
+                <p>
+                    Für diese Webseite ist der/die Lernende Gianmarco Wyss des BBZW Sursee verantwortlich. Es handelt sich hierbei um eine Testversion. Weder die Lernenden noch andere Personen oder Organisationen übernehmen irgendeine Haftung für die Webseite, Inhalte oder Downloads.
+                </p>
             </div>
     </article>
     <footer>
